--- a/estudio_2_comp_state/css/style.css
+++ b/estudio_2_comp_state/css/style.css
@@ -1,5 +1,5 @@
 
-div{
+div, section{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,6 +31,7 @@ img{
     flex-direction: row;
     text-align: center;
     justify-content: center;
+    align-items:"flex-start"
 }
 
 #cont_cambio_state .cont_hacer{
