--- a/estudio_2_comp_state/css/style.css
+++ b/estudio_2_comp_state/css/style.css
@@ -49,3 +49,30 @@ img{
     font-family: fantasy;
     margin: 0;
 }
+/*===============================================*/
+
+
+#juego_dado{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#juego_dado > div{
+    margin: 0 10px;
+    padding: 0px 10px;
+    border: 2px solid black;
+    width: auto;
+}
+
+#juego_dado div:nth-child(1){
+    text-align: center;
+    background-color: rgba(170, 124, 39, 0.6);
+}
+
+#juego_dado h5{
+    margin: 0;
+}
